force-app/main/default/objects/Realty_User__c/Realty_User__c.object-meta.xml
<CustomObject>
    <label>Immo Benutzer</label>
    <nameField>
        <label>Immo Benutzer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Immo Benutzer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>