force-app/main/default/objects/Realty_User__c/fields/AGBs_angenommen__c.field-meta.xml
<CustomField>
    <fullName>AGBs_angenommen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AGBs angenommen</label>
    <type>Checkbox</type>
</CustomField>