force-app/main/default/objects/Realty_User__c/fields/Bild_Datei__c.field-meta.xml
<CustomField>
    <fullName>Bild_Datei__c</fullName>
    <label>Bild-Datei</label>
    <length>250</length>
    <type>Text</type>
</CustomField>