force-app/main/default/objects/Realty_User__c/fields/Buttons__c.field-meta.xml
<CustomField>
    <fullName>Buttons__c</fullName>
    <label>Buttons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>immofinder</fullName>
                <default>true</default>
                <label>immofinder</label>
            </value>
            <value>
                <fullName>whtv</fullName>
            </value>
            <value>
                <fullName>whis</fullName>
            </value>
            <value>
                <fullName>marketing</fullName>
            </value>
            <value>
                <fullName>provision</fullName>
            </value>
            <value>
                <fullName>infothek</fullName>
            </value>
            <value>
                <fullName>leads</fullName>
            </value>
            <value>
                <fullName>website</fullName>
            </value>
            <value>
                <fullName>immoframe</fullName>
            </value>
            <value>
                <fullName>terminplaner</fullName>
            </value>
            <value>
                <fullName>ferienimmobilien</fullName>
            </value>
            <value>
                <fullName>kapitalanlageimmobilien</fullName>
            </value>
            <value>
                <fullName>CRMFileManager</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>