force-app/main/default/objects/Realty_User__c/fields/Cirrus_Files_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cirrus_Files_Folder_Name__c</fullName>
    <formula>Login_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cirrus Files Folder Name</label>
    <type>Text</type>
</CustomField>