force-app/main/default/objects/Realty_User__c/fields/Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>Collection_Id__c</fullName>
    <label>Collection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>