force-app/main/default/objects/Realty_User__c/fields/CRM_Buttons__c.field-meta.xml
<CustomField>
    <fullName>CRM_Buttons__c</fullName>
    <description>Rechte Buttons für das CRM. Bestimmt welcher ImmoBenutzer was tun darf</description>
    <label>CRM Buttons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access_Accounts</fullName>
            </value>
            <value>
                <fullName>Access_Campaigns</fullName>
            </value>
            <value>
                <fullName>Access_Full</fullName>
            </value>
            <value>
                <fullName>Access_Opportunities</fullName>
            </value>
            <value>
                <fullName>Access_Tasks</fullName>
            </value>
            <value>
                <fullName>Access_User</fullName>
            </value>
            <value>
                <fullName>Can_Edit_Full</fullName>
            </value>
            <value>
                <fullName>Is_Admin</fullName>
            </value>
            <value>
                <fullName>Is_Broker</fullName>
            </value>
            <value>
                <fullName>Is_Disabled</fullName>
            </value>
            <value>
                <fullName>Is_Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>