force-app/main/default/objects/Realty_User__c/fields/Datenschutzerkl_rung_angenommen__c.field-meta.xml
<CustomField>
    <fullName>Datenschutzerkl_rung_angenommen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datenschutzerklärung angenommen</label>
    <type>Checkbox</type>
</CustomField>