force-app/main/default/objects/Realty_User__c/fields/Eigenes_Logo__c.field-meta.xml
<CustomField>
    <fullName>Eigenes_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eigenes Logo</label>
    <type>Checkbox</type>
</CustomField>