force-app/main/default/objects/Realty_User__c/fields/Farbcode_RGB__c.field-meta.xml
<CustomField>
    <fullName>Farbcode_RGB__c</fullName>
    <description>Bitte im Format &quot;rrr,ggg,bbb&quot; angeben</description>
    <label>Farbcode RGB</label>
    <length>11</length>
    <type>Text</type>
</CustomField>