force-app/main/default/objects/Realty_User__c/fields/Firmenname__c.field-meta.xml
<CustomField>
    <fullName>Firmenname__c</fullName>
    <label>Firmenname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>