force-app/main/default/objects/Realty_User__c/fields/Firmenzusatzanmerkung__c.field-meta.xml
<CustomField>
    <fullName>Firmenzusatzanmerkung__c</fullName>
    <label>Firmenzusatzanmerkung</label>
    <length>60</length>
    <type>Text</type>
</CustomField>