force-app/main/default/objects/Realty_User__c/fields/Foto_URL__c.field-meta.xml
<CustomField>
    <fullName>Foto_URL__c</fullName>
    <description>Link zum Foto</description>
    <label>Foto_URL</label>
    <type>Url</type>
</CustomField>