force-app/main/default/objects/Realty_User__c/fields/Herkunft__c.field-meta.xml
<CustomField>
    <fullName>Herkunft__c</fullName>
    <inlineHelpText>Beschreibt auf welcher Seite sich der Immobenutzer registriert hat.</inlineHelpText>
    <label>Herkunft</label>
    <length>40</length>
    <type>Text</type>
</CustomField>