force-app/main/default/objects/Realty_User__c/fields/HGB_84er_Makler__c.field-meta.xml
<CustomField>
    <fullName>HGB_84er_Makler__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Makler mit Ausschließlichkeit zum WH im Bereich der Pflege- und Sozialimmobilien</inlineHelpText>
    <label>HGB 84er Makler</label>
    <type>Checkbox</type>
</CustomField>