force-app/main/default/objects/Realty_User__c/fields/Im_System_nicht_bekannt__c.field-meta.xml
<CustomField>
    <fullName>Im_System_nicht_bekannt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Im System nicht bekannt</label>
    <type>Checkbox</type>
</CustomField>