force-app/main/default/objects/Realty_User__c/fields/Kundennummer__c.field-meta.xml
<CustomField>
    <fullName>Kundennummer__c</fullName>
    <label>Kundennummer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>