force-app/main/default/objects/Realty_User__c/fields/Landingpage__c.field-meta.xml
<CustomField>
    <fullName>Landingpage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Liegt eine Vereinbarung über die Landingpage vor?</inlineHelpText>
    <label>Landingpage</label>
    <type>Checkbox</type>
</CustomField>