force-app/main/default/objects/Realty_User__c/fields/lb_AGB_angenommen__c.field-meta.xml
<CustomField>
    <fullName>lb_AGB_angenommen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lb_AGB_angenommen</label>
    <type>Checkbox</type>
</CustomField>