force-app/main/default/objects/Realty_User__c/fields/Leadanzahl_Monat__c.field-meta.xml
<CustomField>
    <fullName>Leadanzahl_Monat__c</fullName>
    <inlineHelpText>Wie viele Leads nimmt der Makler maximal pro Monat ab</inlineHelpText>
    <label>Leadanzahl/Monat</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>