force-app/main/default/objects/Realty_User__c/fields/Leadvereinbarung__c.field-meta.xml
<CustomField>
    <fullName>Leadvereinbarung__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Vertrag über automatische Zuführung von Leads aus reservierten PLZ-Gebieten</inlineHelpText>
    <label>Leadvereinbarung</label>
    <type>Checkbox</type>
</CustomField>