force-app/main/default/objects/Realty_User__c/fields/Letzte_Berechnung__c.field-meta.xml
<CustomField>
    <fullName>Letzte_Berechnung__c</fullName>
    <label>Letzte Berechnung</label>
    <type>DateTime</type>
</CustomField>