force-app/main/default/objects/Realty_User__c/fields/Letzter_Login__c.field-meta.xml
<CustomField>
    <fullName>Letzter_Login__c</fullName>
    <label>Letzter Login</label>
    <type>DateTime</type>
</CustomField>