force-app/main/default/objects/Realty_User__c/fields/Login_Email__c.field-meta.xml
<CustomField>
    <fullName>Login_Email__c</fullName>
    <label>Login Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>