force-app/main/default/objects/Realty_User__c/fields/Logo_Datei__c.field-meta.xml
<CustomField>
    <fullName>Logo_Datei__c</fullName>
    <label>Logo-Datei</label>
    <length>250</length>
    <type>Text</type>
</CustomField>