force-app/main/default/objects/Realty_User__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>Link zum Logo</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>