force-app/main/default/objects/Realty_User__c/fields/Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer__c</fullName>
    <formula>Contact__r.Account.Maklerbetreuer_Wirtschaftshaus_2__r.FirstName + &apos; &apos; + Contact__r.Account.Maklerbetreuer_Wirtschaftshaus_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerbetreuer</label>
    <type>Text</type>
</CustomField>