force-app/main/default/objects/Realty_User__c/fields/Maklerportal_aussehen__c.field-meta.xml
<CustomField>
    <fullName>Maklerportal_aussehen__c</fullName>
    <label>Maklerportal aussehen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FG Finanz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>