force-app/main/default/objects/Realty_User__c/fields/Passwort_vergessen__c.field-meta.xml
<CustomField>
    <fullName>Passwort_vergessen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passwort vergessen</label>
    <type>Checkbox</type>
</CustomField>