force-app/main/default/objects/Realty_User__c/fields/PLZ_Gebiete__c.field-meta.xml
<CustomField>
    <fullName>PLZ_Gebiete__c</fullName>
    <inlineHelpText>Welche PLZ-Gebiete hat der Makler reserviert</inlineHelpText>
    <label>PLZ-Gebiete</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01***</fullName>
            </value>
            <value>
                <fullName>02***</fullName>
            </value>
            <value>
                <fullName>03***</fullName>
            </value>
            <value>
                <fullName>04***</fullName>
            </value>
            <value>
                <fullName>05***</fullName>
            </value>
            <value>
                <fullName>06***</fullName>
            </value>
            <value>
                <fullName>07***</fullName>
            </value>
            <value>
                <fullName>08***</fullName>
            </value>
            <value>
                <fullName>09***</fullName>
            </value>
            <value>
                <fullName>10***</fullName>
            </value>
            <value>
                <fullName>11***</fullName>
            </value>
            <value>
                <fullName>12***</fullName>
            </value>
            <value>
                <fullName>13***</fullName>
            </value>
            <value>
                <fullName>14***</fullName>
            </value>
            <value>
                <fullName>15***</fullName>
            </value>
            <value>
                <fullName>16***</fullName>
            </value>
            <value>
                <fullName>17***</fullName>
            </value>
            <value>
                <fullName>18***</fullName>
            </value>
            <value>
                <fullName>19***</fullName>
            </value>
            <value>
                <fullName>20***</fullName>
            </value>
            <value>
                <fullName>21***</fullName>
            </value>
            <value>
                <fullName>22***</fullName>
            </value>
            <value>
                <fullName>23***</fullName>
            </value>
            <value>
                <fullName>24***</fullName>
            </value>
            <value>
                <fullName>25***</fullName>
            </value>
            <value>
                <fullName>26***</fullName>
            </value>
            <value>
                <fullName>27***</fullName>
            </value>
            <value>
                <fullName>28***</fullName>
            </value>
            <value>
                <fullName>29***</fullName>
            </value>
            <value>
                <fullName>30***</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>