force-app/main/default/objects/Realty_User__c/fields/Schriftfarbe__c.field-meta.xml
<CustomField>
    <fullName>Schriftfarbe__c</fullName>
    <label>Schriftfarbe</label>
    <length>11</length>
    <type>Text</type>
</CustomField>