force-app/main/default/objects/Realty_User__c/fields/Tage_mit_aufeinander_folgendem_Login__c.field-meta.xml
<CustomField>
    <fullName>Tage_mit_aufeinander_folgendem_Login__c</fullName>
    <description>Gibt an wie viele Tage der Benutzer hintereinander eingeloggt war</description>
    <inlineHelpText>Gibt an wie viele Tage der Benutzer hintereinander eingeloggt war</inlineHelpText>
    <label>Tage mit aufeinander folgendem Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>