force-app/main/default/objects/Realty_User__c/fields/Tage_ohne_Login__c.field-meta.xml
<CustomField>
    <fullName>Tage_ohne_Login__c</fullName>
    <description>Gibt an seit wie vielen Tagen der Nutzer nicht mehr eingeloggt war</description>
    <inlineHelpText>Gibt an seit wie vielen Tagen der Nutzer nicht mehr eingeloggt war</inlineHelpText>
    <label>Tage ohne Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>