force-app/main/default/objects/Realty_User__c/fields/Telefonnummer__c.field-meta.xml
<CustomField>
    <fullName>Telefonnummer__c</fullName>
    <label>Telefonnummer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>