force-app/main/default/objects/Realty_User__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Normal Agency</fullName>
            </value>
            <value>
                <fullName>Manager Agency</fullName>
            </value>
            <value>
                <fullName>Free Lancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>