force-app/main/default/objects/Realty_User__c/fields/update__c.field-meta.xml
<CustomField>
    <fullName>update__c</fullName>
    <label>update</label>
    <length>3</length>
    <type>Text</type>
</CustomField>