force-app/main/default/objects/Realty_User__c/fields/Z_hler__c.field-meta.xml
<CustomField>
    <fullName>Z_hler__c</fullName>
    <label>Zähler</label>
    <precision>13</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>