force-app/main/default/objects/Realty_User__c/listViews/Aktiv.listView-meta.xml
<ListView>
    <fullName>Aktiv</fullName>
    <columns>NAME</columns>
    <columns>Buttons__c</columns>
    <columns>Contact__c</columns>
    <columns>AGBs_angenommen__c</columns>
    <columns>Datenschutzerkl_rung_angenommen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Aktiv</label>
    <language>de</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>