force-app/main/default/objects/Realty_User__c/listViews/heute.listView-meta.xml
<ListView>
    <fullName>heute</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Contact__c</columns>
    <columns>Telefonnummer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>heute</label>
    <language>de</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>