force-app/main/default/objects/Realty_User__c/listViews/Neu_im_letzten_Monat_und_aktiv.listView-meta.xml
<ListView>
    <fullName>Neu_im_letzten_Monat_und_aktiv</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Contact__c</columns>
    <columns>Telefonnummer__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2013 12:00 AM</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Letzter_Login__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2015 12:00 AM</value>
    </filters>
    <label>Neu im letzten Monat und aktiv</label>
    <language>de</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>