force-app/main/default/objects/Realty_User__c/listViews/Support_Realty_User.listView-meta.xml
<ListView>
    <fullName>Support_Realty_User</fullName>
    <filterScope>Queue</filterScope>
    <label>Support</label>
    <queue>Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>